welcome.lessons.welcome.methods.picture.PictureMono1.scala.code


def faireV(){
  avance()
  baisseBrosse()
  avance()
  gauche()
  leveBrosse()
  avance()
  droite()
  baisseBrosse()
  avance()
  levebrosse()
  avance()
  droite()
  baisseBrosse()
  avance()
  gauche()
  leveBrosse()
  avance()
  avance()
  gauche()
}

var i : Int =0
for(i<- 1 to 4){
  faireV()
}